--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
       <nav class="flex items-center justify-between">
         <div class="left flex items-center">
-          <div class="branding"><img src="images/logo.png" width="200px">
+          <div class="branding"><img src="images/logo.svg" width="200px">
           </div>
           <div>
             <a href="#">home</a>
@@ -29,6 +29,24 @@
           <button class="btn btn-primary">contact</button>
         </div>
       </nav>
+      <div class="hero flex items-center justify-between">
+        <div class="left flex-1 flex justify-center">
+          <img src="images/men.png">
+        </div>
+        <div class="right flex-1">
+          <h6>
+            Soaib Haque
+          </h6>
+          <h1>
+            I'm Creating a <span>Design</span>
+          </h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+            aute</p>
+          <div class="">
+            <button class="btn btn-secondary">DOWNLOAD CV</button>
+          </div>
+        </div>
+      </div>
     </div>
   </header>
 </body>
