--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>myPotfolio</title>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -31,7 +32,7 @@
       </nav>
       <div class="hero flex items-center justify-between">
         <div class="left flex-1 flex justify-center">
-          <img src="images/men.png">
+          <img src="images/man.png">
         </div>
         <div class="right flex-1">
           <h6>
@@ -40,7 +41,11 @@
           <h1>
             I'm Creating a <span>Design</span>
           </h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+          <p>Lorem ipsum dolor sit amet, consectetur
+            adipisicing elit, sed do eiusmod tempor incididunt
+            ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco
+            laboris nisi ut aliquip ex ea commodo consequat. Duis
             aute</p>
           <div class="">
             <button class="btn btn-secondary">DOWNLOAD CV</button>
@@ -49,6 +54,46 @@
       </div>
     </div>
   </header>
+  <section class="about">
+    <div class="container flex items-center">
+      <div class="flex-1">
+        <img class="about-me-img" src="images/man-2.png" alt="">
+      </div>
+      <div class="flex-1">
+        <h1>About <span>Me</span></h1>
+        <h3>Hello i'm Soaib Haque</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur
+          adipisicing elit. Vel perspiciatis officiis,
+          odio nihil eaque voluptatum et reprehenderit
+          accusantium esse facere architecto qui incidunt
+          repellat molestiae optio voluptas non iusto
+          aspernatur cum, est excepturi? Molestias
+          impedit quasi aliquam minima
+          , voluptatem itaque possimus eligendi
+          quaerat ss nostrum facilis
+          nesciunt pariatur maiores provident suscipit dolorum vel perferendis
+          iusto explicabo sint est laudantium, earum libero iste ut voluptatum
+          quos porro expedita. At dicta ad doloribus,
+          delectus, inventore corrupti autem? Rem fuga, reiciendis?</p>
+        <div class="social">
+          <a href="#"><img src="images/website.svg" alt=""></a>
+          <a href="#"><img src="images/facebook.svg" alt=""></a>
+          <a href="#"><img src="images/twitter.svg" alt=""></a>
+          <a href="#"><img src="images/pintrest.svg" alt=""></a>
+          <a href="#"><img src="images/instagram.svg" alt=""></a>
+      </div>
+    </div>
+    </div>
+  </section>
+  <section class="service">
+    <div class="container">
+      <h1><span>Our</span> Service</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, et.</p>
+    </div>
+    <div class="card-wapper">
+      <div class="card"><img src="images/brush.svg" alt=""></div>
+    </div>
+  </section>
 </body>
 
 </html>
