--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>myPotfolio</title>
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link href="http://www.w3.org/2000/svg">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -81,8 +83,8 @@
           <a href="#"><img src="images/twitter.svg" alt=""></a>
           <a href="#"><img src="images/pintrest.svg" alt=""></a>
           <a href="#"><img src="images/instagram.svg" alt=""></a>
+        </div>
       </div>
-    </div>
     </div>
   </section>
   <section class="service">
