--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>myPotfolio</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
@@ -76,11 +77,12 @@
           quos porro expedita. At dicta ad doloribus,
           delectus, inventore corrupti autem? Rem fuga, reiciendis?</p>
         <div class="social">
-          <a href="#"><img src="images/website.svg" alt=""></a>
-          <a href="#"><img src="images/facebook.svg" alt=""></a>
-          <a href="#"><img src="images/twitter.svg" alt=""></a>
-          <a href="#"><img src="images/pintrest.svg" alt=""></a>
-          <a href="#"><img src="images/instagram.svg" alt=""></a>
+          <a href="#"><i class="fa fa-globe" style="font-size:24px;color:white"></i></a>
+          <a href="#"><i class="fa fa-facebook-f" style="font-size:24px;color:white"></i></a>
+          <a href="#"><i class="fa fa-instagram" style="font-size:24px;color:white"></i></a>
+          <a href="#"><i class="fa fa-pinterest-p" style="font-size:24px;color:white"></i></a>
+          <a href="#"><i class="fa fa-twitter" style="font-size:24px;color:white"></i></a>
+
       </div>
     </div>
     </div>
@@ -91,7 +93,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, et.</p>
     </div>
     <div class="card-wapper">
-      <div class="card"><img src="images/brush.svg" alt=""></div>
+      <div class="card"> <i class="fa fa-paint-brush"></i> </div>
     </div>
   </section>
 </body>
