--- a/index.html
+++ b/index.html
@@ -6,15 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>myPotfolio</title>
-<<<<<<< HEAD
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-=======
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
->>>>>>> a77e916e2608194964bc5c3c3c2e2a602f4bb98e
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <link href="http://www.w3.org/2000/svg">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -83,31 +78,51 @@
           quos porro expedita. At dicta ad doloribus,
           delectus, inventore corrupti autem? Rem fuga, reiciendis?</p>
         <div class="social">
-<<<<<<< HEAD
-          <a href="#"><img src="images/website.svg" alt=""></a>
-          <a href="#"><img src="images/facebook.svg" alt=""></a>
-          <a href="#"><img src="images/twitter.svg" alt=""></a>
-          <a href="#"><img src="images/pintrest.svg" alt=""></a>
-          <a href="#"><img src="images/instagram.svg" alt=""></a>
-        </div>
-=======
           <a href="#"><i class="fa fa-globe" style="font-size:24px;color:white"></i></a>
           <a href="#"><i class="fa fa-facebook-f" style="font-size:24px;color:white"></i></a>
           <a href="#"><i class="fa fa-instagram" style="font-size:24px;color:white"></i></a>
           <a href="#"><i class="fa fa-pinterest-p" style="font-size:24px;color:white"></i></a>
           <a href="#"><i class="fa fa-twitter" style="font-size:24px;color:white"></i></a>
-
->>>>>>> a77e916e2608194964bc5c3c3c2e2a602f4bb98e
+        </div>
       </div>
     </div>
   </section>
   <section class="service">
     <div class="container">
-      <h1><span>Our</span> Service</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, et.</p>
-    </div>
-    <div class="card-wapper">
-      <div class="card"> <i class="fa fa-paint-brush"></i> </div>
+      <h1 class="section-heading"><span>Our</span> Service</h1>
+      <p>Lorem ipsum doldfdfd elit. Dicta, et.</p>
+      <div class="card-wapper">
+        <div class="card">
+          <i class="fa fa-paint-brush"></i>
+          <h2>Graphic Design</h2>
+          <p>Lorem ipsum dfdfdoghitecto quos rerum est, assumenda ipsam suscipit, excepturi.</p>
+        </div>
+        <div class="card">
+          <i class="fa fa-code"></i>
+          <h2>Graphic Design</h2>
+          <p>Lorem ipsum adfdfrchitecto quos rerum est, assumenda ipsam suscipit, excepturi.</p>
+        </div>
+        <div class="card">
+          <i class="fa fa-briefcase"></i>
+          <h2>Graphic Design</h2>
+          <p>Lorem ipsum adfdfdrchitecto quos rerum est, assumenda ipsam suscipit, excepturi.</p>
+        </div>
+        <div class="card">
+          <i class="fa fa-desktop"></i>
+          <h2>Graphic Design</h2>
+          <p>Lorem ipsdfdfdfum doghitecto quos rerum est, assumenda ipsam suscipit, excepturi.</p>
+        </div>
+        <div class="card">
+          <i class="fa fa-film"></i>
+          <h2>Graphic Design</h2>
+          <p>Lorem ipsdfdfdfum drchitecto quos rerum est, assumenda ipsam suscipit, excepturi.</p>
+        </div>
+        <div class="card">
+          <i class="fa fa-mobile" style="font-size:4.5rem;padding:0.8rem 2.4rem"></i>
+          <h2>Graphic Design</h2>
+          <p>Lorem ipfdfdfdfsum architecto quos rerum est, assumenda ipsam suscipit, excepturi.</p>
+        </div>
+      </div>
     </div>
   </section>
 </body>
