--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -18,7 +19,7 @@
     <div class="container">
       <nav class="flex items-center justify-between">
         <div class="left flex items-center">
-          <div class="branding"><img src="images/logo.svg" width="200px">
+          <div class="branding"><img src="../images/logo.svg" width="200px">
           </div>
           <div>
             <a href="#">home</a>
@@ -34,7 +35,7 @@
       </nav>
       <div class="hero flex items-center justify-between">
         <div class="left flex-1 flex justify-center">
-          <img src="images/man.png">
+          <img src="../images/man.png">
         </div>
         <div class="right flex-1">
           <h6>
@@ -59,7 +60,7 @@
   <section class="about">
     <div class="container flex items-center">
       <div class="flex-1">
-        <img class="about-me-img" src="images/man-2.png" alt="">
+        <img class="about-me-img" src="../images/man-2.png" alt="">
       </div>
       <div class="flex-1">
         <h1>About <span>Me</span></h1>
@@ -125,6 +126,45 @@
       </div>
     </div>
   </section>
+  <section class="freelancer">
+    <h1>I Am Available For Freelancer.</h1>
+    <p>We provide high stander clean website for your business.</p>
+    <button class="btn btn-primary">Download CV</button>
+  </section>
+  <section class="reviews">
+    <div class="container">
+      <h1 class="section-heading"><span>Our </span>Client</h1>
+      <p>Lorem ipsum dolor siio reprehenderit.</p>
+      <div class="slider">
+        <div class="slide">
+          <img src="../images/lady.png" alt="">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde corporis nostrum ex omnis at expedita error quasi natus sapiente, inventore consequatur, doloremque nesciunt eius adipisci!</p>
+          <span>- Soaib Haque, Company falan-dimkana</span>
+        </div>
+        <div class="slide">
+          <img src="../images/lady.png" alt="">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde corporis nostrum ex omnis at expedita error quasi natus sapiente, inventore consequatur, doloremque nesciunt eius adipisci!</p>
+          <span>- Soaib Haque, Company falan-dimkana</span>
+        </div>
+        <div class="slide">
+          <img src="../images/lady.png" alt="">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde corporis nostrum ex omnis at expedita error quasi natus sapiente, inventore consequatur, doloremque nesciunt eius adipisci!</p>
+          <span>- Soaib Haque, Company falan-dimkana</span>
+        </div>
+        <div class="slide">
+          <img src="../images/lady.png" alt="">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde corporis nostrum ex omnis at expedita error quasi natus sapiente, inventore consequatur, doloremque nesciunt eius adipisci!</p>
+          <span>- Soaib Haque, Company falan-dimkana</span>
+        </div>
+      </div>
+    </div>
+  </section>
+  <div style="margin-bottom:20%;">
+  </div>
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="../js/app.js"></script>
 </body>
 
 </html>
